--- a/ACL4SSR_Online_Mini_MultiMode.yaml
+++ b/ACL4SSR_Online_Mini_MultiMode.yaml
@@ -126,6 +126,8 @@ rule-providers:
     type: http
 
 rules:
+  #10.0.0.0/24为本人自用网段，可删除
+  - IP-CIDR,10.0.0.0/24,♻️ 自动选择
   - "RULE-SET,LocalAreaNetwork,🎯 全球直连"
   - "RULE-SET,UnBan,🎯 全球直连"
   - "RULE-SET,GoogleCN,🎯 全球直连"
