--- a/极简分流规则.yaml
+++ b/极简分流规则.yaml
@@ -11,6 +11,7 @@ proxy-groups:
   - name: ♻️ 自动选择
     type: url-test
     include-all: true
+    exclude-filter: (?i)GB|Traffic|Expire|Premium|频道|订阅|ISP|流量|到期|重置|用户|官网
     url: https://www.gstatic.com/generate_204
     interval: 30
     tolerance: 50
