修改节点测速和切换间隔
修改节点测速和切换间隔

--- a/极简分流规则.yaml
+++ b/极简分流规则.yaml
@@ -5,6 +5,7 @@
 proxy-groups:
   - name: 🚀 节点选择
     type: select
+    include-all: true
     proxies:
       - ♻️ 自动选择
 
@@ -13,8 +14,8 @@ proxy-groups:
     include-all: true
     exclude-filter: (?i)GB|Traffic|Expire|Premium|频道|订阅|ISP|流量|到期|重置|用户|官网
     url: https://www.gstatic.com/generate_204
-    interval: 300
-    tolerance: 50
+    interval: 60
+    tolerance: 20
 
 rules:
   #10.0.0.0/24和192.168.168.0/24为本人自用网段，可删除
