--- a/ACL4SSR_Online_Full_AdblockPlus.yaml
+++ b/ACL4SSR_Online_Full_AdblockPlus.yaml
@@ -6,6 +6,8 @@
 # 增强国外GFW：支持
 # 基于ACL4SSR_Online_Full_AdblockPlus.ini制作
 # 制作日期:2024-11-29
+# 更新时间:2024-12-19
+# 更新日志：1、增加了负载均衡模式轮询和散列
 
 proxy-groups:
   - name: 🚀 节点选择
@@ -13,7 +15,8 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🔯 故障转移
-      - 🔮 负载均衡
+      - 🔮 负载均衡(轮询)
+      - 🔮 负载均衡(散列)
       - 🇭🇰 香港节点
       - 🇨🇳 台湾节点
       - 🇸🇬 狮城节点
@@ -38,12 +41,21 @@ proxy-groups:
     interval: 60
     tolerance: 20
 
-  - name: 🔮 负载均衡
+  - name: 🔮 负载均衡(轮询)
+    type: load-balance
+    include-all: true
+    strategy: round-robin
+    interval: 60
+    tolerance: 20
+    lazy: true 
+    
+  - name: 🔮 负载均衡(散列)
     type: load-balance
     include-all: true
     strategy: consistent-hashing
     interval: 60
     tolerance: 20
+    lazy: true     
 
   - name: 📲 电报消息
     type: select
