--- a/ACL4SSR_Online_Full_CF.ini
+++ b/ACL4SSR_Online_Full_CF.ini
@@ -61,8 +61,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]📶 官方优选`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]☑️ 其他节点`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`.*
-
-custom_proxy_group=♻️ 自动选择`url-test`[]📶 官方优选`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`300,,30
+custom_proxy_group=♻️ 自动选择`url-test`[]📶 官方优选`☑️ 其他节点[]`🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`300,,30
 custom_proxy_group=📶 官方优选`url-test`(官方|防|电信|联通|移动|CT|CU|CM|CF|t.me|WARP|Warp|warp|Cloudflare|三网|优化|优选)`http://www.gstatic.com/generate_204`300,,30
 custom_proxy_group=☑️ 其他节点`url-test`.*`http://www.gstatic.com/generate_204`300,,30
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
