--- a/ACL4SSR_Online_Full_MultiMode_Cloudflare.ini
+++ b/ACL4SSR_Online_Full_MultiMode_Cloudflare.ini
@@ -8,6 +8,7 @@
 ;苹果分流：支持
 ;增强中国IP段：支持
 ;增强国外GFW：支持
+;更新时间：2025-07-31
 
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/cmliu/ACL4SSR/refs/heads/main/Clash/CFnat.list
@@ -60,8 +61,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`[]📶 官方优选`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📶 官方优选`load-balance`(官方|防|电信|联通|移动|CT|CU|CM|CF|t.me|WARP|Warp|warp|Cloudflare)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`[]📶 官方优选`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`300,,60
+custom_proxy_group=📶 官方优选`load-balance`(官方|防|电信|联通|移动|CT|CU|CM|CF|t.me|WARP|Warp|warp|Cloudflare)`http://www.gstatic.com/generate_204`300,,60
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=🤖 OpenAi`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
